# game-editor

./: .gitignore  CMakeLists.txt  Editor.c  Editor.h  README.md  TODO.md  defines.h  main.c
Assets/: style.css
Helpers/: Drawing.c  Drawing.h  FileIO.c  FileIO.h  GameInterface.c  GameInterface.h  Input.c  Input.h  KVList.c  KVList.h  LevelWriter.c  LevelWriter.h  List.c  List.h  Options.c  Options.h  TextureReader.c  TextureReader.h  Vector2.c  Vector2.h
UI/: BenchmarkWindow.c  BenchmarkWindow.h  IOWindow.c  IOWindow.h  KvWindow.c  KvWindow.h  MainWindow.c  MainWindow.h  MapPropertiesWindow.c  MapPropertiesWindow.h  Message.c  Message.h  OptionsWindow.c  OptionsWindow.h  TextureBrowserWindow.c  TextureBrowserWindow.h  UiHelpers.c  UiHelpers.h
